--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -15,7 +15,7 @@
   <body>
     <ul class="nav nav-tabs">
       <li role="presentation"><a href="{{url_for('index')}}">Home</a></li>
-      <li role="presentation"><a href="{{url_for('index')}}">Profile</a></li>
+      <li role="presentation"><a href="{{url_for('profile')}}">Profile</a></li>
       <li role="presentation"><a href="{{url_for('logout')}}">Logout</a></li>
     </ul>
     {% block content %}{% endblock %}
