--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -1,3 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
+    <h1>{{ user.name }}!</h1>
+    <div class = "rating"><p> Rating: {{ user.rating }} </p><div>
+    <div class = "listing"><p> {{user.name}} is {{user.listing}}</b></p></div>
 {% endblock %}
