--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,8 +6,9 @@
   	{% else %}
     <title>Dinex Market</title>
     {% endif %}
-    <link rel = "stylesheet" type = "text/css" href = "{{url_for('static',filename = 'base-style-pure.css')}}">
-    <link rel = "stylesheet" type = "text/css" href = "{{url_for('static', filename ='pure/pure-min.css')}}">
+    <!--link rel = "stylesheet" type = "text/css" href = "{{url_for('static',filename = 'base-style-pure.css')}}"-->
+    <!--link rel = "stylesheet" type = "text/css" href = "{{url_for('static', filename ='pure/pure-min.css')}}"-->
+    <link rel = "stylesheet" type = "text/css" href = "{{url_for('static',filename='bootstrap/css/bootstrap.min.css'">
     <meta name = "viewport" content = "width = device-width,initial-scale=1">
     <meta charset = "utf-8">
   <body>
