--- a/app/templates/listings.html
+++ b/app/templates/listings.html
@@ -8,35 +8,45 @@
     {% else %}
     	<p> SELLING </p>
     {% endif %}
-    <div class = "listing"><p> Description: {{list.details}}</b></p></div>
     <div class = "location"><p> Location: {{list.location}}</p></div>
-    <div class = "time-avail"><p> Exchange Rate: {{list.exchangerate}}</p></div>
+    <div class = "item and price"><p> {{list.blockOrDinex}} at ${{list.price}} each</p></div>
+    <div class = "listing"><p> Details: {{list.details}}</b></p></div>
     {% endfor %}
 	<h1> Put up a Listing</h1>
 	<form action = "" method = "post" name = "register">
 		{{form.hidden_tag()}}
+
+      <div class = "form-group">
+        <label class="col-sm-2 control-label">Buy or sell</label>
+          {{form.buysell(placeholder="Buy or Sell",class="form-control")}}
+      </div><br>
+
+      <div class = "form-group">
+        <label class="col-sm-2 control-label">Block or Dinex</label>
+          {{form.blockOrDinex(placeholder="Block or Dinex",class="form-control")}}
+      </div><br>
+
+      <div class = "form-group">
+        <label class="col-sm-2 control-label">Price</label>
+          <div class="col-sm-10">
+            {{form.price(placeholder="Block price in $, or Dinex rate in ratio form (e.g. 0.80 means $1 Dinex = $0.80) ",class="form-control")}}
+          </div>
+      </div><br>
+
+      <div class = "form-group">
+        <label class="col-sm-2 control-label">Location</label>
+          <div class="col-sm-10">
+             {{form.location(placeholder="Location",class="form-control")}}
+          </div>
+      </div><br>
+
 			<div class = "form-group">
-              <label class="col-sm-2 control-label">Details</label>
-              <div class="col-sm-10">
-            	 {{form.details(size=60,placeholder="Details",class="form-control")}}
-              </div>
-            </div>
-            <div class = "form-group">
-              <label class="col-sm-2 control-label">Location</label>
-              <div class="col-sm-10">
-             {{form.location(size=60,placeholder="Location",class="form-control")}}
-              </div>
-            </div>
-            <div class = "form-group">
-              <label class="col-sm-2 control-label">Exchange Rate</label>
-              <div class="col-sm-10">
-             {{form.exchangerate(size=60,placeholder="Exchange Rate",class="form-control")}}
-              </div>
-            </div>
-            <div class = "form-group">
-              <label class="col-sm-2 control-label">Buy or sell</label>
-             {{form.buyorsell(placeholder="Buy or Sell",class="form-control")}}
-            </div>
+        <label class="col-sm-2 control-label">Details</label>
+          <div class="col-sm-10">
+        	  {{form.details(size=60,placeholder="Details",class="form-control")}}
+          </div>
+      </div>
+
         <div class="form-group">
           <div class="col-sm-offset-2 col-sm-3">
             <button type="submit" class="btn btn-default" value = "Submit">Submit</button>
