--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -2,28 +2,46 @@
 {% block content %}
   <h2 class = "pagehead">Sign in</h2>
   <form action = "" method = "post" name = "login">
-    <div class = "pure-form pure-form-stacked">
   	{{form.hidden_tag()}}
     	<fieldset>
         <legend> Login Form </legend>
-         {{form.nickname(size=60,placeholder="Name")}}
+            <div class = "form-group">
+              <label for="inputEmail3" class="col-sm-2 control-label">Username</label>
+              <div class="col-sm-10">
+             {{form.nickname(size=60,placeholder="Name",class="form-control")}}
+              </div>
+            </div>
           {% for error in form.nickname.errors %}
             <a style = "color: red;">[{{error}}]</a>
           {% endfor %}
-         {{form.password(size=60,placeholder="Password")}} 
+            <div class = "form-group">
+              <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
+              <div class="col-sm-10">
+             {{form.password(size=60,placeholder="Password",class="form-control")}}
+              </div>
+            </div>
         {% for error in form.password.errors %}
             <a style = "color: red;">[{{error}}]</a>
           <br>
         {% endfor %}
           <br>
-         <label for = "remember">
-          {{form.remember_me(id="remember")}} Remember Me
-         </label>
-         <br>
-         <input class = "pure-button pure-button-primary" type = "submit" value = "Sign in">
-         <br>
+          <div class="form-group">
+          <div class="col-sm-offset-2 col-sm-10">
+            <div class="checkbox">
+              <label>
+                {{form.remember_me(id="remember")}} Remember Me
+              </label>
+            </div>
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="col-sm-offset-2 col-sm-10">
+            <button type="submit" class="btn btn-default" value = "Sign in">Sign in</button>
+          </div>
+        </div>
       </fieldset>
     </div>
   </form>
-  <p><a href = "{{url_for('register')}}" class = "pure-button">Register a new account</a></p>
+  <br>
+  <p><a href = "{{url_for('register')}}" class = "btn btn-default">Register a new account</a></p>
 {% endblock %}
