--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -3,41 +3,31 @@
 <h1> Register a new account </h1>
 <form action = "" method = "post" name = "register">
 	{{form.hidden_tag()}}
-	<div class = "form">
-	<table>
-		<tr>
-		<td> Nickname: </td><td>{{form.nickname(size=80)}}</td>
-		<td>
-		{% for error in form.nickname.errors %}
-		<span style = "color: red;">[{{error}}]</span>
-		<br>
-		{% endfor %}
-		</td>		
-		</tr>
-		<tr>
-		<td> Password: </td><td>{{form.password(size=80)}}</td>
-		<td>
-		{% for error in form.password.errors %}
-		<span style = "color: red;">[{{error}}]</span>
-		<br>
-		{% endfor %}
-		</td>
-		</tr>
-		<tr>
-		<td> Email: </td><td>{{form.email(size=80)}}</td>
-		<td>
-		{% for error in form.email.errors %}
-		<span style = "color: red;">[{{error}}]</span>
-		<br>
-		{% endfor %}
-		</td>
-		</tr>
-		<tr>
-		<td><input type = "submit" value = "Register"></td>
-		<td></td>
-		<td></td>
-		</tr>
-	</div>
-	</table>
+		<div class = "form-group">
+              <label class="col-sm-2 control-label">Username</label>
+              <div class="col-sm-10">
+             {{form.nickname(size=60,placeholder="Name",class="form-control")}}
+              </div>
+            </div>
+          {% for error in form.nickname.errors %}
+            <a style = "color: red;">[{{error}}]</a>
+          {% endfor %}
+            <div class = "form-group">
+              <label class="col-sm-2 control-label">Password</label>
+              <div class="col-sm-10">
+             {{form.password(size=60,placeholder="Password",class="form-control")}}
+              </div>
+            </div>
+            <div class = "form-group">
+              <label  class="col-sm-2 control-label">Email</label>
+              <div class="col-sm-10">
+             {{form.email(size=60,placeholder="Email",class="form-control")}}
+              </div>
+            </div>
+        <div class="form-group">
+          <div class="col-sm-offset-2 col-sm-10">
+            <button type="submit" class="btn btn-default" value = "Sign in">Sign in</button>
+          </div>
+        </div>
 </form>
 {% endblock %}
