--- a/app/templates/listings.html
+++ b/app/templates/listings.html
@@ -1,3 +1,10 @@
 {% extends "base.html" %}
 {% block content %}
+  <h1>{{ user.nickname }}!</h1>
+   {% for list in lists %} 
+    <div> {{ list.user.nickname }}</div>
+    <div class = "listing"><p> Description: {{list.description}}</b></p></div>
+    <div class = "location"><p> Location: {{list.location}}</p></div>
+    <div class = "time-avail"><p> Time Available: {{list.timeAvail}}</p></div>
+    {% endfor %}
 {% endblock %}
