--- a/app/templates/listings.html
+++ b/app/templates/listings.html
@@ -9,4 +9,9 @@
     	<div class = "time-avail"> Time Available: {{list.timeAvail}}</div>
     </p>
     {% endfor %}
+	<form action="" method="post" name="login">
+      {{ form.hidden_tag() }}
+       {{ form.description(size=80) }}
+      <p><input type="submit" value="Sign In"></p>
+  </form>
 {% endblock %}
