--- a/app/templates/listings.html
+++ b/app/templates/listings.html
@@ -12,9 +12,35 @@
     <div class = "location"><p> Location: {{list.location}}</p></div>
     <div class = "time-avail"><p> Exchange Rate: {{list.exchangerate}}</p></div>
     {% endfor %}
-	<form action="" method="post" name="login">
-      {{ form.hidden_tag() }}
-       {{ form.description(size=80) }}
-      <p><input type="submit" value="Sign In"></p>
-  </form>
+	<h1> Put up a Listing</h1>
+	<form action = "" method = "post" name = "register">
+		{{form.hidden_tag()}}
+			<div class = "form-group">
+              <label class="col-sm-2 control-label">Details</label>
+              <div class="col-sm-10">
+            	 {{form.details(size=60,placeholder="Details",class="form-control")}}
+              </div>
+            </div>
+            <div class = "form-group">
+              <label class="col-sm-2 control-label">Location</label>
+              <div class="col-sm-10">
+             {{form.location(size=60,placeholder="Location",class="form-control")}}
+              </div>
+            </div>
+            <div class = "form-group">
+              <label class="col-sm-2 control-label">Time Available</label>
+              <div class="col-sm-10">
+             {{form.timeAvail(size=60,placeholder="Time Available",class="form-control")}}
+              </div>
+            </div>
+            <div class = "form-group">
+              <label class="col-sm-2 control-label">Buy or sell</label>
+             {{form.buyorsell(placeholder="Buy or Sell",class="form-control")}}
+            </div>
+        <div class="form-group">
+          <div class="col-sm-offset-2 col-sm-3">
+            <button type="submit" class="btn btn-default" value = "Submit">Submit</button>
+          </div>
+        </div>
+	</form>
 {% endblock %}
