--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -16,6 +16,7 @@
     <ul class="nav nav-tabs">
       <li role="presentation"><a href="{{url_for('index')}}">Home</a></li>
       <li role="presentation"><a href="{{url_for('profile')}}">Profile</a></li>
+      <li role="presentation"><a href="{{url_for('listings')}}">Listings</a></li>
       <li role="presentation"><a href="{{url_for('logout')}}">Logout</a></li>
     </ul>
     {% block content %}{% endblock %}
