--- a/app/templates/listings.html
+++ b/app/templates/listings.html
@@ -28,9 +28,9 @@
               </div>
             </div>
             <div class = "form-group">
-              <label class="col-sm-2 control-label">Time Available</label>
+              <label class="col-sm-2 control-label">Exchange Rate</label>
               <div class="col-sm-10">
-             {{form.timeAvail(size=60,placeholder="Time Available",class="form-control")}}
+             {{form.exchangerate(size=60,placeholder="Exchange Rate",class="form-control")}}
               </div>
             </div>
             <div class = "form-group">
