--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -3,4 +3,5 @@
     <h1>{{ user.nickname }}!</h1>
     <div class = "rating"><p> Rating: {{ user.rating }} </p><div>
     <div class = "listing"><p> {{user.nickname}} is {{user.description}}</b></p></div>
+    <p><a href = "{{url_for('editProfile')}}" class = "btn btn-default">Edit Your Profile</a></p>
 {% endblock %}
