--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Simple Sidebar - Start Bootstrap Template</title>
+    <title>CMU Dining Exchange</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="{{url_for('static',filename='bootstrap/css/bootstrap.min.css')}}" rel="stylesheet">
@@ -37,7 +37,7 @@
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
                     <a href="#">
-                        CMU Dining Market
+                        CMU Dining Exchange
                     </a>
                 </li>
                 <li>
@@ -48,9 +48,6 @@
                 </li>
                 <li>
                     <a href="{{url_for('listings')}}">Listings</a>
-                </li>
-                <li>
-                    <a href="{{url_for('login')}}">Login/Register</a>
                 </li>
                 <li>
                     <a href="{{url_for('logout')}}">Logout</a>
