--- a/app/templates/editprofile.html
+++ b/app/templates/editprofile.html
@@ -1,8 +1,9 @@
 {% extends "base.html" %}
 {% block content %}
+<p><b>About Me: </b></p>
  <form action="" method="post" name="updateprof">
   	{{form.hidden_tag()}}
-       {{form.description(size=80)}}
+       {{form.description(size=140)}}
       <p><button type="submit" value="Update" class = "btn btn-default">Update</button></p>
   </form>
 {% endblock %}
