--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -15,7 +15,7 @@
             <a style = "color: red;">[{{error}}]</a>
           {% endfor %}
             <div class = "form-group">
-              <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
+              <label for="inputEmail3" class="col-sm-2 control-label">Password</label>
               <div class="col-sm-10">
              {{form.password(size=60,placeholder="Password",class="form-control")}}
               </div>
