--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
     <h1>{{ user.nickname }}'s Profile</h1>
-    <div class = "rating"><p> Rating: {{ user.rating|round(2) }} | Number of ratings: {{user.numberOfRatings}}</p><div>
-    <div class = "listing"><p> {{user.nickname}} is {{user.description}}</b></p></div>
+    <div class = "rating"><p> <b>Rating:</b> {{ user.rating|round(2) }} <br> <b>Number of ratings</b>: {{user.numberOfRatings}}</p><div>
+    <div class = "listing"><p><b>About Me:</b> {{user.description}}</b></p></div>
     {% if user.nickname == loginUser.nickname %}
     <p><a href = "{{url_for('editProfile')}}" class = "btn btn-default">Edit Your Profile</a></p>
     {% endif %}
