--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,9 +7,9 @@
     <title>Dinex Market</title>
     {% endif %}
     <!--link rel = "stylesheet" type = "text/css" href = "{{url_for('static',filename = 'base-style-pure.css')}}"-->
-    <!--link rel = "stylesheet" type = "text/css" href = "{{url_for('static', filename ='pure/pure-min.css')}}"-->
     <link rel = "stylesheet" type = "text/css" href = "{{url_for('static',filename='bootstrap/css/bootstrap.min.css')}}">
-    <link rel = "stylesheet" type = "text/css" href = "{{url_for('static',filename='main.css')}}">
+    <link rel = "stylesheet" type = "text/css" href = "{{url_for('static',filename='base-style.css')}}">
+    <link rel = "stylesheet" type = "text/css" href = "{{url_for('static', filename ='pure/pure-min.css')}}">
     <meta name = "viewport" content = "width = device-width,initial-scale=1">
     <meta charset = "utf-8">
   <body>
@@ -21,5 +21,6 @@
     </ul>
     {% block content %}{% endblock %}
     <script type=text/javascript src="{{url_for('static', filename='jquery.js') }}"></script>
+    <script type=text/javascript src="{{url_for('static', filename='bootstrap/js/bootstrap.js') }}"></script>
   </body>
 </html>
