--- a/app/templates/listings.html
+++ b/app/templates/listings.html
@@ -1,18 +1,37 @@
 {% extends "base.html" %}
 {% block content %}
   <h1>{{ user.nickname }}!</h1>
+ <div class="dropdown">
+   <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      Sort By <span class="caret"></span>
+    </button>
+  <ul class="dropdown-menu">
+    <li><a href="#">Username</a></li>
+    <li><a href="#">Exchange Rate (Ascending)</a></li>
+    <li><a href="#">Exchange Rate (Descending)</a></li>
+  </ul>
+    </div>
    {% for list in lists %} 
-    <div> <a href = "{{url_for('profile')}}/{{ list.user.nickname }}">{{list.user.nickname}}</a></div>
+   <div class = "l-box">
+    <div class = "highlight">
     {% if list.buysell %}
-    	<p> BUYING </p>
+         BUYING 
     {% else %}
-    	<p> SELLING </p>
+        SELLING 
     {% endif %}
-    <div class = "listing"><p> Description: {{list.details}}</b></p></div>
-    <div class = "location"><p> Location: {{list.location}}</p></div>
-    <div class = "time-avail"><p> Exchange Rate: {{list.exchangerate}}</p></div>
+  </div>
+    <div class = "leftspace"><a href = "{{url_for('profile')}}/{{ list.user.nickname }}">
+      {{list.user.nickname}}</a>
+  </div>
+    <div class = "pure-g">
+    <div class = "pure-u-1-3 text-center"> Description: {{list.details}}</b></div>
+    <div class = "pure-u-1-3 text-center"> Location: {{list.location}}</div>
+    <div class = "pure-u-1-3 text-center"> Exchange Rate: {{list.exchangerate}}</div>
+  </div>
+</div>
     {% endfor %}
-	<h1> Put up a Listing</h1>
+	<h1 class = "listingHeading"> Put up a Listing</h1>
+
 	<form action = "" method = "post" name = "register">
 		{{form.hidden_tag()}}
 			<div class = "form-group">
@@ -42,5 +61,17 @@
             <button type="submit" class="btn btn-default" value = "Submit">Submit</button>
           </div>
         </div>
+            <script>
+      $(document).ready(function() {
+          $("button.dropdown-toggle").click(function(ev) {
+              $("button.dropdown-toggle").dropdown("toggle");
+              return false;
+          });
+          $("ul.dropdown-menu a").click(function(ev) {
+              $("a.dropdown-toggle").dropdown("toggle");
+              return false;
+          });
+      });
+    </script>
 	</form>
 {% endblock %}
