--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
 {% block content %}
-  <h1>String thats coming from views.py:, {{testvar}}!</h1>
+<h1>Dinex/Block Market</h1>
+<p>This website is a place where students can sell left over dinex or blocks</p>
 {% endblock %}
