--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -13,6 +13,8 @@
 
     <!-- Bootstrap Core CSS -->
     <link href="{{url_for('static',filename='bootstrap/css/bootstrap.min.css')}}" rel="stylesheet">
+    <link href="{{url_for('static',filename='base-style.css')}}" rel="stylesheet">
+    <link href="{{url_for('static',filename='pure/pure-min.css')}}" rel="stylesheet">
 
     <!-- Custom CSS -->
     <link href="{{url_for('static',filename='bootstrap/css/simple-sidebar.css')}}" rel="stylesheet">
