--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -48,6 +48,9 @@
                     <a href="{{url_for('listings')}}">Listings</a>
                 </li>
                 <li>
+                    <a href="{{url_for('login')}}">Login/Register</a>
+                </li>
+                <li>
                     <a href="{{url_for('logout')}}">Logout</a>
                 </li>
             </ul>
