--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-    <h1>{{ user.nickname }}!</h1>
+    <h1>{{ user.nickname }}'s Profile</h1>
     <div class = "rating"><p> Rating: {{ user.rating|round(2) }} | Number of ratings: {{user.numberOfRatings}}</p><div>
     <div class = "listing"><p> {{user.nickname}} is {{user.description}}</b></p></div>
     {% if user.nickname == loginUser.nickname %}
