--- a/app/templates/listings.html
+++ b/app/templates/listings.html
@@ -11,7 +11,7 @@
       [x]
       {% endif %}Exchange Rate (Ascending)</a></li>
      <li><a href="{{url_for('listings', setting = updateFunc(set,'g'))}}">
-      {% if 'u' in set %}
+      {% if 'g' in set %}
       [x]
       {% endif %}Exchange Rate (Descending)</a></li>
   </ul>
