--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -43,5 +43,7 @@
     </div>
   </form>
   <br>
+            <div class="col-sm-2 registerbutton">
   <p><a href = "{{url_for('register')}}" class = "btn btn-default">Register a new account</a></p>
+  </div>
 {% endblock %}
