--- a/app/templates/listings.html
+++ b/app/templates/listings.html
@@ -54,26 +54,24 @@
       {{list.user.nickname}}</a>
    </div>
     <div class = "pure-g">
-    <div class = "pure-u-1-4 text-center"><p> Location: {{list.location}}</p></div>
-    <div class = "pure-u-1-4 text-center"><p> {{list.blockOrDinex}} at $ {{list.price}} each</p></div>
-    <div class = "pure-u-1-4 text-center"><p> Details: {{list.details}}</p></div>
-    <div class = "pure-u-1-4 text-center"><p><a href="{{ url_for('.transaction', postid=list.id) }}">
-    I'm interested</a></p></div>
-    </div>
+    <div class = "pure-u-1-3 text-center"><p> Location: {{list.location}}</p></div>
+    <div class = "pure-u-1-3 text-center"><p> {{list.blockOrDinex}} at $ {{list.price}} each</p></div>
+    <div class = "pure-u-1-3 text-center"><p> Details: {{list.details}}</b></p></div>
+      </div>
     </div>
     {% endfor %}
-	<h1 class = "listingHeading">Put up a Listing</h1>
+	<h1 class = "listingHeading"> Put up a Listing</h1>
 
 	<form action = "" method = "post" name = "register">
 		{{form.hidden_tag()}}
 
       <div class = "form-group">
-        <label class="col-sm-10 control-label">Buy or sell</label>
+        <label class="col-sm-2 control-label">Buy or sell</label>
           {{form.buysell(placeholder="Buy or Sell",class="form-control")}}
       </div><br>
 
       <div class = "form-group">
-        <label class="col-sm-10 control-label">Block or Dinex</label>
+        <label class="col-sm-2 control-label">Block or Dinex</label>
           {{form.blockOrDinex(placeholder="Block or Dinex",class="form-control")}}
       </div><br>
 
