--- a/app/templates/listings.html
+++ b/app/templates/listings.html
@@ -11,7 +11,7 @@
       [x]
       {% endif %}Exchange Rate (Ascending)</a></li>
      <li><a href="{{url_for('listings', setting = updateFunc(set,'g'))}}">
-      {% if 'g' in set %}
+      {% if 'u' in set %}
       [x]
       {% endif %}Exchange Rate (Descending)</a></li>
   </ul>
@@ -45,24 +45,22 @@
    <div class = "l-box">
     <div class = "highlight">
     {% if list.buysell %}
-         BUYING 
+         <b>BUYING</b> 
     {% else %}
-        SELLING 
+        <b>SELLING </b>
     {% endif %}
    </div>
     <div class = "leftspace"><a href = "{{url_for('profile')}}/{{ list.user.nickname }}">
       {{list.user.nickname}}</a>
    </div>
     <div class = "pure-g">
-    <div class = "pure-u-1-4 text-center"><p> Location: {{list.location}}</p></div>
-    <div class = "pure-u-1-4 text-center"><p> {{list.blockOrDinex}} at $ {{list.price}} each</p></div>
-    <div class = "pure-u-1-4 text-center"><p> Details: {{list.details}}</p></div>
-    <div class = "pure-u-1-4 text-center"><p><a href="{{ url_for('.transaction', postid=list.id) }}">
-    I'm interested</a></p></div>
-    </div>
+    <div class = "pure-u-1-3 text-center"><p> Location: {{list.location}}</p></div>
+    <div class = "pure-u-1-3 text-center"><p> {{list.blockOrDinex}} at $ {{list.price}} each</p></div>
+    <div class = "pure-u-1-3 text-center"><p> Details: {{list.details}}</b></p></div>
+      </div>
     </div>
     {% endfor %}
-	<h1 class = "listingHeading">Put up a Listing</h1>
+	<h1 class = "listingHeading"> Put up a Listing</h1>
 
 	<form action = "" method = "post" name = "register">
 		{{form.hidden_tag()}}
