--- a/app/templates/listings.html
+++ b/app/templates/listings.html
@@ -54,9 +54,11 @@
       {{list.user.nickname}}</a>
    </div>
     <div class = "pure-g">
-    <div class = "pure-u-1-3 text-center"><p> Location: {{list.location}}</p></div>
-    <div class = "pure-u-1-3 text-center"><p> {{list.blockOrDinex}} at $ {{list.price}} each</p></div>
-    <div class = "pure-u-1-3 text-center"><p> Details: {{list.details}}</b></p></div>
+    <div class = "pure-u-1-4 text-center"><p> Location: {{list.location}}</p></div>
+    <div class = "pure-u-1-4 text-center"><p> {{list.blockOrDinex}} at $ {{list.price}} each</p></div>
+    <div class = "pure-u-1-4 text-center"><p> Details: {{list.details}}</p></div>
+    <div class = "pure-u-1-4 text-center"><p><a href="{{ url_for('.transaction', postid=list.id) }}">
+    I'm interested</a></p></div>
       </div>
     </div>
     {% endfor %}
