--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -44,7 +44,7 @@
                     <a href="{{url_for('index')}}">Home</a>
                 </li>
                 <li>
-                    <a href="{{url_for('profile')}}">Profile</a>
+                    <a href="{{url_for('profile')}}">Profile ({{g.user.nickname}})</a>
                 </li>
                 <li>
                     <a href="{{url_for('listings')}}">Listings</a>
