--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -2,8 +2,9 @@
 {% block content %}
     <h1>{{ user.nickname }}'s Profile</h1>
     <div class = "rating"><p> <b>Rating:</b> {{ user.rating|round(2) }} <br> <b>Number of ratings</b>: {{user.numberOfRatings}}</p><div>
+    <p> <b>Buy alerts:</b> {{user.buyAlert}}<br>
+    <b>Sell alerts:</b> {{user.sellAlert}}</p>
     <div class = "listing"><p><b>About Me:</b> {{user.description}}</b></p></div>
     {% if user.nickname == loginUser.nickname %}
-    <p><a href = "{{url_for('editProfile')}}" class = "btn btn-default">Edit Your Profile</a></p>
-    {% endif %}
-{% endblock %}
+    <p><a href = "{{url_for('editProfile')}}" class = "btn btn-default">Edit Your Profile and Alerts</a></p>
+    {% endif %}{%endblock%}
