made buy/sell alerts on/off instead of true/false

--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -6,8 +6,8 @@
   		</div>
   		<div class="panel-body">
    			<div class = "rating" style="Font-size:17px"><p> <b>Rating:</b> {{ user.rating|round(2) }} / 5.0 <br> <b>Number of ratings</b>: {{user.numberOfRatings}}</p><div>
-   			 <p> <b>Buy alerts:</b> {{user.buyAlert}}<br>
-    		<b>Sell alerts:</b> {{user.sellAlert}}</p>
+   			 <p> <b>Buy alerts:</b> {% if user.buyAlert == True %}On{% else %}Off{% endif %}<br>
+    		<b>Sell alerts:</b> {% if user.sellAlert == True %}On{% else %}Off{% endif %}</p>
    			<div class = "listing"><p><b>About Me:</b> {{user.description}}</b></p></div>
    			{% if user.nickname == loginUser.nickname %}
     			<p><a href = "{{url_for('editProfile')}}" class = "btn btn-info">Edit Your Profile and Alerts</a></p>
