--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -26,7 +26,7 @@
             </div>
         <div class="form-group">
           <div class="col-sm-offset-2 col-sm-10">
-            <button type="submit" class="btn btn-default" value = "Sign in">Sign in</button>
+            <button type="submit" class="btn btn-default" value = "Register">Register</button>
           </div>
         </div>
 </form>
