--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -37,7 +37,7 @@
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
                     <a href="#">
-                        CMU Dining Exchange
+                        <b>CMU Dining Exchange</b>
                     </a>
                 </li>
                 <li>
