--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,5 +4,5 @@
 <p><i>Not to be confused with <a href = "http://webapps.studentaffairs.cmu.edu/dining/ConceptInfo/?page=conceptDetails&conceptId=92">The Exchange</a>, located in the Tepper School of Business.</i></p>
 
 <p>Here you can arrange meetings to buy and sell meal blocks or Dinex from the CMU Dining Plan.</p>
-<p><a href = "{{url_for('register')}}" class = "btn btn-default">Register a new account</a> or <a href = "{{url_for('login')}}" class = "btn btn-default">sign in</a> with an existing account.	</p>
+<p><a href = "{{url_for('register')}}" class = "btn btn-default">Register a new account</a> or <a href = "{{url_for('login')}}" class = "btn btn-default">Sign in</a> with an existing account.	</p>
 {% endblock %}
