--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,9 +1,13 @@
 {% extends "base.html" %}
 {% block content %}
-  <h2 class = "pagehead">Sign in</h2>
-  <form action = "" method = "post" name = "login">
-  	{{form.hidden_tag()}}
-    	<fieldset>
+<div class="panel panel-info">
+  <div class="panel-heading">
+    <h3 class="panel-title">Sign in</h3>
+  </div>
+  <div class="panel-body">
+      <form action = "" method = "post" name = "login">
+    {{form.hidden_tag()}}
+      <fieldset>
         <legend> Login Form </legend>
             <div class = "form-group">
               <label for="inputEmail3" class="col-sm-2 control-label">Username</label>
@@ -35,15 +39,21 @@
           </div>
         </div>
         <div class="form-group">
-          <div class="col-sm-offset-2 col-sm-10">
-            <button type="submit" class="btn btn-default" value = "Sign in">Sign in</button>
+          <div class="col-sm-offset-2 col-sm-1">
+            <button type="submit" class="btn btn-info" value = "Sign in" >Sign in</button>
+          </div>
+          <div class="col-sm-2 registerbutton">
+            <a href = "{{url_for('register')}}" class = "btn btn-info">Register a new account</a>
           </div>
         </div>
+        
       </fieldset>
     </div>
   </form>
   <br>
-            <div class="col-sm-2 registerbutton">
-  <p><a href = "{{url_for('register')}}" class = "btn btn-default">Register a new account</a></p>
+            
   </div>
+</div>
+ 
+
 {% endblock %}
