--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -5,10 +5,10 @@
     <h3 class="panel-title">Sign in</h3>
   </div>
   <div class="panel-body">
+        <h3>Login Form</h3>
       <form action = "" method = "post" name = "login">
     {{form.hidden_tag()}}
       <fieldset>
-        <legend> Login Form </legend>
             <div class = "form-group">
               <label for="inputEmail3" class="col-sm-2 control-label">Username</label>
               <div class="col-sm-10">
@@ -40,10 +40,10 @@
         </div>
         <div class="form-group">
           <div class="col-sm-offset-2 col-sm-1">
-            <button type="submit" class="btn btn-info" value = "Sign in" >Sign in</button>
+            <button type="submit" class="btn btn-info registerbutton" value = "Sign in">Sign in</button>
           </div>
-          <div class="col-sm-2 registerbutton">
-            <a href = "{{url_for('register')}}" class = "btn btn-info">Register a new account</a>
+          <div class="col-sm-offset-1 col-sm-1">
+            <a href = "{{url_for('register')}}" class = "btn btn-info registerbutton">Register a new account</a>
           </div>
         </div>
         
