fixed price history

--- a/app/templates/pricehistory.html
+++ b/app/templates/pricehistory.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 <h3 style="Font-size:30px"> Price History </h3>
+<p><i>Time to invest in Dinex futures</i></p>
 {{ price_chart.render()|safe }}
 {% endblock %}
 
