--- a/app/templates/listings.html
+++ b/app/templates/listings.html
@@ -1,7 +1,9 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="panel panel-info">
-  <div class="panel-heading">  <h1>{{ user.nickname }}! Here are currently active listings:</h1> </div>
+
+  <div class="panel-heading">
+ 	<h3 class="panel-title" style="Font-size:30px">{{ user.nickname }}! Here are currently active listings:</h3> </div>
   <div class="panel-body">
     <div class="dropdown buttonblock">
    <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -73,7 +75,7 @@
 
 <div class="panel panel-info">
   <div class="panel-heading">
-    <h3 class="panel-title"><h1 class = "listingHeading">Or post your own listing:</h1></h3>
+    <h3 class="panel-title" style="Font-size:30px">Or post your own listing:</h3>
   </div>
   <div class="panel-body">
     <form action = "" method = "post" name = "register">
