--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div class="panel panel-info">
   <div class="panel-heading">
-    <h3 class="panel-title">Sign in</h3>
+    <h3 class="panel-title"><h2> Sign in</h2> </h3>
   </div>
   <div class="panel-body">
         <h3>Login Form</h3>
