--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -2,10 +2,10 @@
 {% block content %}
 	<div class="panel panel-info" style="border-color: #B0E2FF;">
   		<div class="panel-heading" style="background-color:#B0E2FF;">
-    		<h3 class="panel-title" style="Font-size:30px; color:#27408B;">{{ user.nickname }}'s Profile</h3>
+    		<h3 class="panel-title" style="Font-size:30px">{{ user.nickname }}'s Profile</h3>
   		</div>
   		<div class="panel-body">
-   			<div class = "rating"><p> <b>Rating:</b> {{ user.rating|round(2) }} / 5.0 <br> <b>Number of ratings</b>: {{user.numberOfRatings}}</p><div>
+   			<div class = "rating" style="Font-size:17px"><p> <b>Rating:</b> {{ user.rating|round(2) }} / 5.0 <br> <b>Number of ratings</b>: {{user.numberOfRatings}}</p><div>
    			 <p> <b>Buy alerts:</b> {{user.buyAlert}}<br>
     		<b>Sell alerts:</b> {{user.sellAlert}}</p>
    			<div class = "listing"><p><b>About Me:</b> {{user.description}}</b></p></div>
