--- a/app/templates/editprofile.html
+++ b/app/templates/editprofile.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 <p><b>I want to receive email alerts about these kinds of new posts:</b><br>
-	<form action="" method="post" name="editprofile">
+	<form action="" method="post" name="editProfile">
 	{{form.hidden_tag()}}
 	{{form.buyAlert}} Buy posts <br>
 	{{form.sellAlert}} Sell posts</p>
