--- a/app/templates/success.html
+++ b/app/templates/success.html
@@ -1,8 +1,13 @@
 {% extends "base.html" %}
 {% block content %}
-<p><b>Success!</b></p>
-<p>You should receive an email soon with the details of the transaction. To communicate with the poster, you can use the email in the same message.</p>
-<br>
-<a href = "geturl('listings')">Return to listings</a>
-
+<div class="panel panel-info">
+  <div class="panel-heading">
+    <h3 class="panel-title" style="font-size:30px">Success!</h3>
+  </div>
+  <div class="panel-body">
+    <p>You should receive an email soon with the details of the transaction. To communicate with the poster, you can use the email in the same message.</p>
+    <br>
+	<a href = "geturl('listings')">Return to listings</a>
+  </div>
+</div>
 {% endblock %}
