--- a/app/static/base-style.css
+++ b/app/static/base-style.css
@@ -13,7 +13,7 @@
     margin: 0.5em 0.25em;
 	border: 1px solid rgba(125,125,125,1);
 	border-radius: 1px;
-	background-color: #eee;
+	background-color: #bfefff;
 }
 
 .listingHeading{
