--- a/app/templates/listings.html
+++ b/app/templates/listings.html
@@ -6,7 +6,7 @@
  	<h3 class="panel-title" style="Font-size:30px">{{ user.nickname }}! Here are currently active listings:</h3> </div>
   <div class="panel-body">
     <div class="dropdown buttonblock">
-   <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+   <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
       Sort By <span class="caret"></span>
     </button>
   <ul class="dropdown-menu">
@@ -21,7 +21,7 @@
   </ul>
     </div>
      <div class="dropdown buttonblock">
-   <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+   <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
       Filter By <span class="caret"></span>
     </button>
   <ul class="dropdown-menu">
@@ -52,13 +52,14 @@
    <div class = "l-box">
     <div class = "highlight">
     {% if list.buysell %}
-         <b>BUYING</b> 
+         <b>BUYING</b> <a href = "{{url_for('profile')}}/{{ list.user.nickname }}">
+      {{list.user.nickname}}</a>
     {% else %}
-        <b>SELLING </b>
+        <b>SELLING </b><a href = "{{url_for('profile')}}/{{ list.user.nickname }}">
+      {{list.user.nickname}}</a>
     {% endif %}
    </div>
-    <div class = "leftspace"><a href = "{{url_for('profile')}}/{{ list.user.nickname }}">
-      {{list.user.nickname}}</a>
+    <div class = "leftspace">
    </div>
     <div class = "pure-g">
     <div class = "pure-u-1-5 text-center"><p> Time posted: {{list.timestamp}}</p></div>      
@@ -114,7 +115,7 @@
 
         <div class="form-group">
           <div class="col-sm-offset-2 col-sm-3">
-            <button type="submit" class="btn btn-default" value = "Submit">Submit</button>
+            <button type="submit" class="btn btn-info" value = "Submit">Submit</button>
           </div>
         </div>
             <script>
