--- a/app/templates/transaction.html
+++ b/app/templates/transaction.html
@@ -1,6 +1,10 @@
 {% extends "base.html" %}
 {% block content %}
-    <h1>You are viewing a listing from {{poster.nickname}}.</h1>
+<div class="panel panel-info">
+  <div class="panel-heading">
+    <h3 class="panel-title" style="Font-size:30px">You are viewing a listing from {{poster.nickname}}.</h3>
+  </div>
+  <div class="panel-body">
     <p> Location: {{post.location}}</p>
     <p> 1 {{post.blockOrDinex}} for $ {{post.price}} each </p>
     <p> Details: {{post.details}}</p>
@@ -8,5 +12,8 @@
       {{ form.hidden_tag() }}
       {{form.confirm}} I agree to this transaction
       <p><input type="submit" value="Submit"></p>
-  </form>
+  	</form>
+  </div>
+</div>	
+    
 {% endblock %}
