--- a/app/templates/pricehistory.html
+++ b/app/templates/pricehistory.html
@@ -7,6 +7,7 @@
   <div class="panel-body">
     <p><i>Time to invest in Dinex futures</i></p>
 	{{ price_chart.render()|safe }}
+	{{ price_chart2.render()|safe }}
   </div>
 </div>
 
